[package]
name = "ralph-rs"
version = "0.1.0"
edition = "2021"
description = "Autonomous AI agent loop for iterative development"
license = "MIT"
repository = "https://github.com/martinstark/ralph-rs"
keywords = ["cli", "ai", "automation", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
tokio = { version = "1", features = ["full", "process", "signal"] }
tokio-util = "0.7"
owo-colors = "4"
chrono = "0.4"
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
